--- a/Biruni.FE/app.config
+++ b/Biruni.FE/app.config
@@ -11,16 +11,16 @@
                 <value>Blue</value>
             </setting>
             <setting name="dbServer" serializeAs="String">
-                <value>(local)\sqlexpress</value>
+                <value>(local)\sqlexpress2005</value>
             </setting>
             <setting name="dbName" serializeAs="String">
                 <value>dbInventory</value>
             </setting>
             <setting name="dbUser" serializeAs="String">
-                <value>sax</value>
+                <value>sa</value>
             </setting>
             <setting name="dbPassword" serializeAs="String">
-                <value>pYxwDZ21Y+M=</value>
+                <value>getdown</value>
             </setting>
             <setting name="webSite" serializeAs="String">
                 <value>http://www.Biruniech.com</value>
