--- a/Biruni.Shared/app.config
+++ b/Biruni.Shared/app.config
@@ -1,14 +1,12 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Biruni.Shared.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Biruni.Shared.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="Biruni.Shared.Properties.Settings.dbInventoryConnectionString"
-            connectionString="Data Source=(local)\sql2005;Initial Catalog=dbInventory;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="Biruni.Shared.Properties.Settings.dbInventoryConnectionString" connectionString="Data Source=(local)\sql2005;Initial Catalog=dbInventory;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <userSettings>
         <Biruni.Shared.Properties.Settings>
@@ -26,4 +24,8 @@
             </setting>
         </Biruni.Shared.Properties.Settings>
     </userSettings>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v2.0.50727"></supportedRuntime>
+  </startup>
 </configuration>
