--- a/Biruni.FE/app.config
+++ b/Biruni.FE/app.config
@@ -10,20 +10,20 @@
             <setting name="visualStyle" serializeAs="String">
                 <value>Blue</value>
             </setting>
-            <setting name="dbServer" serializeAs="String">
-                <value>(local)\sqlexpress2005</value>
-            </setting>
             <setting name="dbName" serializeAs="String">
                 <value>dbInventory</value>
+            </setting>
+            <setting name="webSite" serializeAs="String">
+                <value>http://www.birunilabs.com</value>
+            </setting>
+            <setting name="dbServer" serializeAs="String">
+                <value>(local)\sqlexpress</value>
             </setting>
             <setting name="dbUser" serializeAs="String">
                 <value>sa</value>
             </setting>
             <setting name="dbPassword" serializeAs="String">
-                <value>getdown</value>
-            </setting>
-            <setting name="webSite" serializeAs="String">
-                <value>http://www.Biruniech.com</value>
+                <value>sql</value>
             </setting>
         </Biruni.FE.Properties.Settings>
     </userSettings>
