--- a/Biruni.Shared/app.config
+++ b/Biruni.Shared/app.config
@@ -6,7 +6,9 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="Biruni.Shared.Properties.Settings.dbInventoryConnectionString" connectionString="Data Source=(local)\sql2005;Initial Catalog=dbInventory;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="Biruni.Shared.Properties.Settings.dbInventoryConnectionString"
+            connectionString="Data Source=(local)\sqlexpress;Initial Catalog=dbInventory;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <userSettings>
         <Biruni.Shared.Properties.Settings>
