--- a/Biruni.Shared/Biruni.Shared.csproj
+++ b/Biruni.Shared/Biruni.Shared.csproj
@@ -70,6 +70,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppHelper.cs" />
+    <Compile Include="Data\DataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Data\DbHelper.cs" />
     <Compile Include="Data\dsCore.cs">
       <DependentUpon>dsCore.xsd</DependentUpon>
@@ -134,6 +139,17 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Data\DataSet1.xsc">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="Data\DataSet1.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSet1.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Data\DataSet1.xss">
+      <DependentUpon>DataSet1.xsd</DependentUpon>
+    </None>
     <None Include="Data\dsCore.xsc">
       <DependentUpon>dsCore.xsd</DependentUpon>
     </None>
